@@ -27,46 +27,6 @@ end_import
 
 begin_import
 import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|HashSet
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -527,13 +487,6 @@ argument_list|(
 name|_conf
 argument_list|)
 decl_stmt|;
-name|Collection
-name|all
-init|=
-operator|new
-name|HashSet
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -575,46 +528,30 @@ argument_list|,
 name|_cache
 argument_list|)
 decl_stmt|;
-name|all
-operator|.
-name|addAll
-argument_list|(
-name|Arrays
-operator|.
-name|asList
-argument_list|(
-name|artifacts
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
 for|for
 control|(
-name|Iterator
-name|iter
+name|int
+name|j
 init|=
-name|all
-operator|.
-name|iterator
-argument_list|()
+literal|0
 init|;
-name|iter
+name|j
+operator|<
+name|artifacts
 operator|.
-name|hasNext
-argument_list|()
+name|length
 condition|;
+name|j
+operator|++
 control|)
 block|{
 name|Artifact
 name|artifact
 init|=
-operator|(
-name|Artifact
-operator|)
-name|iter
-operator|.
-name|next
-argument_list|()
+name|artifacts
+index|[
+name|j
+index|]
 decl_stmt|;
 name|String
 name|name
@@ -632,6 +569,11 @@ argument_list|()
 argument_list|)
 argument_list|,
 name|artifact
+argument_list|,
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
 decl_stmt|;
 name|String
@@ -650,6 +592,11 @@ argument_list|()
 argument_list|)
 argument_list|,
 name|artifact
+argument_list|,
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
 decl_stmt|;
 name|getProject
@@ -662,6 +609,7 @@ argument_list|,
 name|value
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 catch|catch
