@@ -336,6 +336,32 @@ argument_list|(
 name|pattern
 argument_list|,
 name|artifact
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
+specifier|public
+specifier|static
+name|String
+name|substitute
+parameter_list|(
+name|String
+name|pattern
+parameter_list|,
+name|Artifact
+name|artifact
+parameter_list|,
+name|String
+name|conf
+parameter_list|)
+block|{
+return|return
+name|substitute
+argument_list|(
+name|pattern
+argument_list|,
+name|artifact
 operator|.
 name|getModuleRevisionId
 argument_list|()
@@ -374,7 +400,7 @@ operator|.
 name|getExt
 argument_list|()
 argument_list|,
-literal|null
+name|conf
 argument_list|)
 return|;
 block|}
